@@ -88,6 +88,28 @@ def r_home_from_registry() -> Optional[str]:
     return r_home
 
 
+def r_ld_library_path_from_subprocess(r_home: str) -> str:
+    """Get the LD_LIBRARY_PATH settings added by R."""
+    cmd = (os.path.join(r_home, 'bin', 'Rscript'),
+           '-e',
+           'cat(Sys.getenv("LD_LIBRARY_PATH"))')
+    try:
+        r_lib_path = subprocess.check_output(cmd, universal_newlines=True)
+    except Exception:  # FileNotFoundError, WindowsError, etc
+        r_lib_path = ''
+    ld_library_path = os.environ.get('LD_LIBRARY_PATH')
+    if ld_library_path:
+        pos = r_lib_path.find(ld_library_path)
+    else:
+        pos = None
+    if pos == -1 or not ld_library_path:
+        res = r_lib_path
+    else:
+        res = (r_lib_path[pos:(pos+len(ld_library_path))]
+               .rstrip(os.pathsep))
+    return res
+
+
 def get_rlib_path(r_home: str, system: str) -> str:
     """Get the path for the R shared library."""
     if system == 'Linux':
@@ -271,12 +293,17 @@ def iter_info():
         else:
             r_home = r_home_default
 
+    yield _make_bold("R's additions to LD_LIBRARY_PATH:")
+    yield r_ld_library_path_from_subprocess(r_home)
+
     if has_rpy2:
         try:
             import rpy2.rinterface_lib.openrlib
             rlib_status = 'OK'
         except ImportError as ie:
             rlib_status = '*** Error while loading: %s ***' % str(ie)
+        except OSError as ose:
+            rlib_status = str(ose)
     else:
         rlib_status = '*** rpy2 is not installed'
 
@@ -313,6 +340,17 @@ if __name__ == '__main__':
     parser = argparse.ArgumentParser(
         'Command-line tool to report the rpy2'
         'environment and help diagnose issues')
+    parser.add_argument('action',
+                        nargs='?',
+                        choices=('info', 'LD_LIBRARY_PATH'),
+                        default='info',
+                        help=('Action to perform. "info" shows all info, '
+                              'LD_LIBRARY_PATH returns optionally required '
+                              'additions to the environment variable'))
     args = parser.parse_args()
-    for row in iter_info():
-        print(row)
+    if args.action == 'info':
+        for row in iter_info():
+            print(row)
+    elif args.action == 'LD_LIBRARY_PATH':
+        r_home = get_r_home()
+        print(r_ld_library_path_from_subprocess(r_home))
